--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@astrojs/vercel": "^7.0.0",
     "@google/generative-ai": "^0.24.1",
     "@types/node": "^24.10.1",
-    "@vercel/kv": "^3.0.0",
     "astro": "^4.0.0",
     "html2canvas": "^1.4.1",
+    "ioredis": "^5.8.2",
     "lz-string": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -32,6 +32,6 @@
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
   "engines": {
-    "node": "20.x"
+    "node": ">=20.0.0"
   }
 }
